                                                         -*- coding: utf-8 -*-
Changes with Apache Traffic Server 3.3.5

  *) [TS-1898] improve cluster read/write performance.

  *) [TS-2036] Enable mgmt update (traffic_line -x) for plugins.

  *) [TS-2037] Fix start-stop-daemon typo in debian init script.

  *) [TS-2003] Fix RAM cache stats when using cluster. Author: Yunkai Zhang.

  *) [TS-1820] Cleanup UNUSED / INK_UNUSED / RELEASE_UNUSED. This also removes
   the entire mgmt/tools directory, and relevant support in traffic_shell for
   managing network interfaces.

  *) [TS-2033] Remove EncryptToFile() and mgmt API.

  *) [TS-2027] Initialize the ConnectionCount`s mutex.

  *) [TS-1997] Remove TSHttpTxnCachedUrlSet() API.

  *) [TS-2028] Config parse problems in healthchecks plugin.

  *) [TS-1966] Add new configuration option to control ProxyAllocator size.

  *) [TS-1151] cop may crash due to uninitialized pointer val

  *) [TS-2013] Install the tspush script.

  *) [TS-2012] Use standard C++11 containers in logstats.

  *) [TS-1999] Merge in the healthcheck plugin from GoDaddy.

  *) [TS-1998] Make stats-over-http support configurable URL path.

  *) [TS-1990] Fix core at CacheContinuation::handleDisposeEvent().

  *) [TS-2010] Build fixes for OS X 10.9 and Xcode 5.

  *) [TS-1957] fix If CacheContinuation timeout, timeout Event will be loop

  *) [TS-2007] Add TSNetConnectTransparent API for transparent net connections

  *) [TS-1991] clang complaint: logical not is only applied to the left hand
   side of this comparison.

  *) [TS-1958] Web UI can crash doing a regex lookup.

  *) [TS-1994] Increase default RAM cache size by a magnitude.

  *) [TS-1978] Segfault when trying to set an error from (remap) plugin. This
   also fixes a bug where the "default" template was not loaded upon startup.

  *) [TS-1977] Build issues on OSX / clang related to stacksize changes.

  *) [TS-1972] TSNetAcceptNamedProtocol does not receive connections.
